NLP Project added

--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="https://github.com/RashikMahmud-Orchi/Sentiment-Analysis-of-the-Canadian-Job-Market-from-CBC-News-Articles-in-2024">Sentiment Analysis of the Canadian Job Market from CBC News Articles in 2024<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/RashikMahmud-Orchi/Sentiment-Analysis-of-the-Canadian-Job-Market-from-CBC-News-Articles-in-2024" class="image fit"><img src="images/sentiment.png" alt="" /></a>
+									<p>This holds all of my Tableau Dashboards.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/RashikMahmud-Orchi/Sentiment-Analysis-of-the-Canadian-Job-Market-from-CBC-News-Articles-in-2024" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://github.com/RashikMahmud-Orchi/Web-Scraping-with-Selenium">Web Scrapping with Selenium<br />
 										</a></h2>
 									</header>
@@ -118,9 +129,7 @@
 									</ul>
 								</article>
 						</section>
-					</footer>
-
-				<!-- Copyright -->
+					</fooopyright -->
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
