--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
-							<li><a href="Pages/elements.html">About Me</a></li><!-- add the about me page here --> 
+							<!-- <li><a href="Pages/elements.html">About Me</a></li>add the about me page here  -->
 						</ul>
 						<ul class="icons">	
 							<li><a href="https://www.linkedin.com/in/rashikmahmud/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
@@ -80,7 +80,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/RashikMahmud-Orchi/Sentiment-Analysis-of-the-Canadian-Job-Market-from-CBC-News-Articles-in-2024" class="image fit"><img src="images/sentiment.png" alt="" /></a>
-									<p>This holds all of my Tableau Dashboards.</p>
+									<p>This project analyzes the sentiment of CBC News articles to understand public perception and trends in the Canadian job market in 2024. It uses NLP techniques and machine learning algorithms to classify sentiments as positive, negative, or neutral.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/RashikMahmud-Orchi/Sentiment-Analysis-of-the-Canadian-Job-Market-from-CBC-News-Articles-in-2024" class="button">View Project</a></li>
 									</ul>
@@ -101,7 +101,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/RashikMahmud-Orchi/Bank-Customer_Chrun-CLassifcation" class="image fit"><img src="images/bank_churn.jpg" alt="" /></a>
-									<p>This holds all of my Tableau Dashboards.</p>
+									<p>This project focuses on predicting customer churn in banks using machine learning techniques.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/RashikMahmud-Orchi/Bank-Customer_Chrun-CLassifcation" class="button">View Project</a></li>
 									</ul>
@@ -112,12 +112,23 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/RashikMahmud-Orchi/Image-Interactive-Chatbot-with-Streamlit-and-Google-GEMINI-PRO" class="image fit"><img src="images/M-simpler.png" alt="" /></a>
-									<p>This holds all of my Tableau Dashboards.</p>
+									<p>This project enables users to engage with images through a chatbot powered by the Google Gemini Pro API </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/RashikMahmud-Orchi/Image-Interactive-Chatbot-with-Streamlit-and-Google-GEMINI-PRO" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
+									<header>
+										<h2><a href="https://github.com/RashikMahmud-Orchi/Modeling-Smoking-Behavior-in-Bangladesh-Logistic-Regression-with-Random-Effects-Analysis-">Modeling Smoking Behavior in Bangladesh<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/RashikMahmud-Orchi/Modeling-Smoking-Behavior-in-Bangladesh-Logistic-Regression-with-Random-Effects-Analysis-" class="image fit"><img src="images/stopsmoking.jpg" alt="" /></a>
+									<p>This project analyzes factors influencing adult smoking in Bangladesh using statistical modeling.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/RashikMahmud-Orchi/Modeling-Smoking-Behavior-in-Bangladesh-Logistic-Regression-with-Random-Effects-Analysis-" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<!-- <article>
 									<header>
 										<h2><a href="#">Tableau Projects<br />
 										</a></h2>
@@ -127,7 +138,7 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
-								</article>
+								</article> -->
 						</section>
 					</fooopyright -->
 					<div id="copyright">
