--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Rashik Mahmud Orchi Portfolio<br />
 						</h1>
-						<p>Data Analyst skilled in SQL, Tableau, and Python <a href="https://twitter.com/ajlkn">@Rashik Mahmud Orchi</a> 
+						<p>Data Analyst skilled in Python, R, SQL and Tableau<a href="https://twitter.com/ajlkn">@Rashik Mahmud Orchi</a> 
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -72,6 +72,17 @@
 									<a href="https://github.com/RashikMahmud-Orchi/Air-Quality-Prediction-Using-Temporal-Fusion-Transformer-TFT-" class="image fit"><img src="images/TFT.png" alt="" /></a>
 									<p>This project aims to predict air quality(CO2 level) using the Temporal Fusion Transformer (TFT) model, implemented in Python with PyTorch.</p>
 										<li><a href="https://github.com/RashikMahmud-Orchi/Air-Quality-Prediction-Using-Temporal-Fusion-Transformer-TFT-" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/rashikmahmud/Modeling-Smoking-Behavior-in-Bangladesh-Logistic-Regression-with-Random-Effects-Analysis-"> Smoking Behavior in Bangladesh with Logistic-Regression & Random-Effects-Analysis-<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/rashikmahmud/Modeling-Smoking-Behavior-in-Bangladesh-Logistic-Regression-with-Random-Effects-Analysis-" class="image fit"><img src="images/Smoking.png" alt="" /></a>
+									<p>Using logistic regression and random effects modeling, the study aims to identify the  factors associated with smoking behaior in Bangladesh</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/rashikmahmud/Modeling-Smoking-Behavior-in-Bangladesh-Logistic-Regression-with-Random-Effects-Analysis-" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
